# Persistent-Memory-Analysis-Tool

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  DESIGN.md  Makefile.all.am  Makefile.am  README.md  configure.ac  test-pmat.sh
.github/workflows/: greetings.yml
VEX/priv/: guest_amd64_toIR.c  guest_generic_bb_to_IR.c  main_globals.c  main_main.c  main_util.c
VEX/pub/: libvex.h
coregrind/: Makefile.am  m_libcfile.c  m_libcproc.c  m_main.c  m_signals.c  pub_core_options.h
coregrind/m_scheduler/: pmat_backend.h  priv_sched-lock-impl.h  priv_sched-lock.h  random-lock.c  sched-lock-generic.c  sched-lock.c  scheduler.c  sema.c  ticket-lock-linux.c
dhat/: Makefile  Makefile.in
dhat/.deps/: dhat_amd64_linux-dh_main.Po
dhat/tests/: Makefile  Makefile.in
docs/xml/: manual.xml
include/: pub_tool_libcfile.h  pub_tool_libcproc.h
pmat/: Makefile  Makefile.am  Makefile.in  README.md  TODO.md  pm_main.c  pmat.h  pmat_common.c  pmat_include.h  pmat_main.c  x86ToAssembly.c  x86ToAssembly.py
pmat/.deps/: pmat_amd64_linux-pm_main.Po  pmat_x86_linux-pm_main.Po
pmat/docs/: Makefile  Makefile.in  pmc-manual.xml
pmat/tests/: Makefile  Makefile.in  README.md  in-order-store.c  in-order-store_verifier.c  openmp_test.c  openmp_test_verifier.c  out-of-order-store.c  split-store.c  split-store_verifier.c  utils.h
pmat/tests/microbenchmarks/durable_queue/: DurableQueue.cpp  DurableQueue.hpp  DurableQueueVerifier.cpp  HazardPointers.hpp  Makefile  README.md  config.h  durable_queue  durable_queue.c  durable_queue.h  durable_queue_memory_viewer.c  durable_queue_ordered_test.c  durable_queue_ordered_verifier.c  durable_queue_test.c  durable_queue_verifier  durable_queue_verifier.c  hazard.c  hazard.h  notes.md  runner.bash  slurm-runner.bash  verify_single.bash  verify_slurm.bash
pmat/tests/microbenchmarks/linked_list/: Makefile  README.md  linked_list.c  linked_list_test.c  linked_list_verifier.c  notes.md
pmat/tests/microbenchmarks/verifications/: .nop.c.swp  .nop_verifier.c.swp  Makefile  README.md  nop  nop.c  nop_verifier  nop_verifier.c
pmemcheck/: README.md  TODO.md  pmc_common.c  pmc_include.h  pmc_main.c  pmemcheck.h
pmemcheck/pmat_tests/: Makefile  README.md  build.sh  durable_queue.c  durable_queue.h  gc.c  gc.h  in-order-store.c  in-order-store_verifier.c  openmp_test.c  openmp_test_verifier.c  out-of-order-store.c  pmat_test.c  pmat_test_verifier.c
pmemcheck/pmat_tests/microbenchmarks/durable_queue/: Makefile  README.md  durable_queue.c  durable_queue.h  durable_queue_test.c  durable_queue_verifier.c  notes.md  prk_openmp.h
tests/: check_headers_and_includes
(+8 files in other folders)
